# TraderSimPP

./: .gitmodules  CMakeLists.txt  README.md  build_and_run.bat
data/: historical_data.py  orders.csv
include/: EventEngine.h  MeanReversionStrategy.h  Order.h  OrderBook.h  Strategy.h  Trade.h
src/: EventEngine.cpp  MeanReversionStrategy.cpp  Order.cpp  OrderBook.cpp  main.cpp
tests/: test_main.cpp  test_order.cpp  test_order_book.cpp
